--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
         <div class="section-2">
             <h1><center>Some random information.</center></h1>
             <div class="squares">
-                <div class="one"><div class="text">this is some subtext under an illustration or image</div></div>
-                <div class="two"><div class="text">this is some subtext under an illustration or image</div></div>
-                <div class="three"><div class="text">this is some subtext under an illustration or image</div></div>
-                <div class="four"><div class="text">this is some subtext under an illustration or image</div></div>
+                <div class="one"></div>
+                <div class="two"></div>
+                <div class="three"></div>
+                <div class="four"></div>
                 </div>
+                <div class="text">
+                        <div class="a">this is some subtext under an illustration or image</div>
+                        <div class="b">this is some subtext under an illustration or image</div>
+                        <div class="c">this is some subtext under an illustration or image</div>
+                        <div class="d">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </body>
@@ -48,7 +53,7 @@
         <div class="last">
             <div class="text1">Call to action!It`s time!</div>
             <div class="text2">Sign up for our product by clicking the button right there!</div>
-            <div class="sign.up">Sign up</div>
+            <div class="box"><p>Sign up</p></div>
         </div>
     </div>
     <div class="footer">
